<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailHikeActivity">
    <include
        android:id="@+id/include"
        layout="@layout/actionbar_rowback" />
    <TextView
        android:id="@+id/title_add_hike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/crete_round"
        android:text="@string/title_detail_hike"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/name_hike_detail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/crete_round"
        android:text="name of hike"
        android:textColor="@color/purple_700"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_add_hike" />

    <TextView
        android:id="@+id/location_hike_detail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/crete_round"
        android:text="location of hike"
        android:textColor="@color/purple_700"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_hike_detail" />

    <TextView
        android:id="@+id/parking_available_detail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/crete_round"
        android:text="Yes"
        android:textColor="@color/purple_700"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_hike_detail" />

    <TextView
        android:id="@+id/length_hike_detail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/crete_round"
        android:text="100"
        android:textColor="@color/purple_700"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parking_available_detail" />

    <TextView
        android:id="@+id/level_hike_detail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/crete_round"
        android:text="20/10/2023"
        android:textColor="@color/purple_700"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/length_hike_detail" />

    <TextView
        android:id="@+id/des_hike_detail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/crete_round"
        android:text="20/10/2023"
        android:textColor="@color/purple_700"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_hike_detail" />

    <TextView
        android:id="@+id/date_hike_detail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/crete_round"
        android:text="20/10/2023"
        android:textColor="@color/purple_700"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_hike_detail" />

    <TextView
        android:id="@+id/title_name_hike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/crete_round"
        android:text="@string/name_hike"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_add_hike" />

    <TextView
        android:id="@+id/title_location_hike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/crete_round"
        android:text="@string/location_hike"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_hike_detail" />


    <TextView
        android:id="@+id/title_date_hike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/crete_round"
        android:text="@string/datetime_hike"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_hike_detail" />

    <TextView
        android:id="@+id/parking_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/crete_round"
        android:text="@string/parking_available"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_hike_detail" />

    <TextView
        android:id="@+id/length_hike_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/crete_round"
        android:text="@string/length_hike"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parking_available_detail" />


    <TextView
        android:id="@+id/level_hike_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/crete_round"
        android:text="@string/level_hike"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/length_hike_detail" />


    <TextView
        android:id="@+id/title_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/crete_round"
        android:text="@string/description_hike"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_hike_detail" />

    <Button
        android:id="@+id/see_all_observation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_input"
        android:fontFamily="@font/crete_round"
        android:text="See all observation of hike"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_des" />

</androidx.constraintlayout.widget.ConstraintLayout>